my acount script and increase runs

--- a/properties/NewLook_SFP.properties
+++ b/properties/NewLook_SFP.properties
@@ -56,20 +56,19 @@ graphitePrefix=Test.NewLook.VNP.
 
 # Test duration in seconds (5 minutes=300)
 #duration=3900
-#duration=360
-#duration=9000
-
+runs=50
 # Ramp-up Time in seconds (5 minutes=300)
 rampUpTime=1
-#rampUpTime=300
-#rampUpTime=1800
 
 # Think time between requests in milliseconds
 thinkTime=500
 thinkTimeVariation=200
 
 PAYMENT_HOSTNAME=testsecureacceptance.cybersource.com
-
+#wiremock_hostname=wiremock-be-cicd-dsf-uks-as.azurewebsites.net
+wiremock_port=80
+#wiremock_hostname=localhost
+#wiremock_port=8081
 ###########################################################
 # Stores parameters
 #----------------------------------------------------------
@@ -81,26 +80,46 @@ store.2=FR
 #store.4=NL
 
 
-UK.hostname=www.newlook.com
+UK.hostname=my-account-fe-cicd-dsf-uks-as.azurewebsites.net
+UK.port=80
+#UK.hostname=localhost
+#UK.port=4200
+#UK.port=4000
+#UK.hostname=www.newlook.com
 #UK.hostname=www-h-vnp.newlook.com
 UK.store=UK
 UK.basepath=uk
 UK.language=en
 
-FR.hostname=www.newlook.com
+FR.hostname=my-account-fe-cicd-dsf-uks-as.azurewebsites.net
+FR.port=80
+#FR.hostname=localhost
+#FR.port=4200
+#FR.port=4000
+#FR.hostname=www.newlook.com
 #FR.hostname=www-h-vnp.newlook.com
 FR.store=FR
 FR.basepath=fr
 FR.language=fr
 
+DE.hostname=my-account-fe-cicd-dsf-uks-as.azurewebsites.net
+DE.port=80
+#DE.hostname=localhost
+#DE.port=4200
+#DE.port=4000
 #DE.hostname=www.newlook.com
-DE.hostname=www-h-vnp.newlook.com
+#DE.hostname=www-h-vnp.newlook.com
 DE.store=DE
 DE.basepath=de
 DE.language=de
 
+NL.hostname=my-account-fe-cicd-dsf-uks-as.azurewebsites.net
+NL.port=80
+#NL.hostname=localhost
+#NL.port=4200
+#NL.port=4000
 #NL.hostname=www.newlook.com
-NL.hostname=www-h-vnp.newlook.com
+#NL.hostname=www-h-vnp.newlook.com
 NL.store=NL
 NL.basepath=row
 NL.language=en
@@ -204,176 +223,26 @@ NL.dataFile.searchTermsDataFile=searchTerms.txt
 ## UK
 
 # Desktop search/browse
-UK.UJ-Homepage.Threads=1
-UK.UJ-Homepage.Pacing=1000
-UK.UJ-BrowseTopCategory.Threads=1
-UK.UJ-BrowseTopCategory.Pacing=1000
-UK.UJ-BrowseSubCategory.Threads=1
-UK.UJ-BrowseSubCategory.Pacing=1000
-UK.UJ-BrowseTerCategory.Threads=1
-UK.UJ-BrowseTerCategory.Pacing=1000
-UK.UJ-BrowseFilteredCategory.Threads=1
-UK.UJ-BrowseFilteredCategory.Pacing=1000
-UK.UJ-BrowsePDP.Threads=1
-UK.UJ-BrowsePDP.Pacing=1000
-UK.UJ-Search.Threads=1
-UK.UJ-Search.Pacing=1000
-
-UK.UJ-BrowsePLPAddSavedItem.Threads=1
-UK.UJ-BrowsePLPAddSavedItem.Pacing=1000
-UK.UJ-BrowsePDPAndSavedItem.Threads=1
-UK.UJ-BrowsePDPAndSavedItem.Pacing=1000
-UK.UJ-BrowsePDPAndFindInStore.Threads=1
-UK.UJ-BrowsePDPAndFindInStore.Pacing=1000
-UK.UJ-LogonViewOrderDetails.Threads=1
-UK.UJ-LogonViewOrderDetails.Pacing=1000
-
-UK.UJ-AddToCart.Threads=1
-UK.UJ-AddToCart.Pacing=1000
-UK.UJ-UpdateCart.Threads=1
-UK.UJ-UpdateCart.Pacing=1000
-UK.UJ-GuestDeliveryCheckout.Threads=1
-UK.UJ-GuestDeliveryCheckout.Pacing=1000
-UK.UJ-GuestCollectionCheckout.Threads=1
-UK.UJ-GuestCollectionCheckout.Pacing=1000
-UK.UJ-GuestLogonDeliveryCheckout.Threads=1
-UK.UJ-GuestLogonDeliveryCheckout.Pacing=1000
-UK.UJ-GuestLogonCollectionCheckout.Threads=1
-UK.UJ-GuestLogonCollectionCheckout.Pacing=1000
-UK.UJ-LogonDeliveryCheckout.Threads=1
-UK.UJ-LogonDeliveryCheckout.Pacing=1000
-UK.UJ-LogonPromoDeliveryCheckout.Threads=1
-UK.UJ-LogonPromoDeliveryCheckout.Pacing=1000
+UK.UJ-MyAccount.Threads=3
+UK.UJ-MyAccount-MyOrders.Threads=3
 
 ## FR
 
 # Desktop search/browse
-FR.UJ-Homepage.Threads=1
-FR.UJ-Homepage.Pacing=1000
-FR.UJ-BrowseTopCategory.Threads=1
-FR.UJ-BrowseTopCategory.Pacing=1000
-FR.UJ-BrowseSubCategory.Threads=1
-FR.UJ-BrowseSubCategory.Pacing=1000
-FR.UJ-BrowseTerCategory.Threads=1
-FR.UJ-BrowseTerCategory.Pacing=1000
-FR.UJ-BrowseFilteredCategory.Threads=1
-FR.UJ-BrowseFilteredCategory.Pacing=1000
-FR.UJ-BrowsePDP.Threads=1
-FR.UJ-BrowsePDP.Pacing=1000
-FR.UJ-Search.Threads=1
-FR.UJ-Search.Pacing=1000
-
-FR.UJ-BrowsePLPAddSavedItem.Threads=1
-FR.UJ-BrowsePLPAddSavedItem.Pacing=1000
-FR.UJ-BrowsePDPAndSavedItem.Threads=1
-FR.UJ-BrowsePDPAndSavedItem.Pacing=1000
-FR.UJ-LogonViewOrderDetails.Threads=1
-FR.UJ-LogonViewOrderDetails.Pacing=1000
-
-FR.UJ-AddToCart.Threads=1
-FR.UJ-AddToCart.Pacing=1000
-FR.UJ-UpdateCart.Threads=1
-FR.UJ-UpdateCart.Pacing=1000
-FR.UJ-GuestDeliveryCheckout.Threads=1
-FR.UJ-GuestDeliveryCheckout.Pacing=1000
-FR.UJ-GuestCollectionCheckout.Threads=1
-FR.UJ-GuestCollectionCheckout.Pacing=1000
-FR.UJ-GuestLogonDeliveryCheckout.Threads=1
-FR.UJ-GuestLogonDeliveryCheckout.Pacing=1000
-FR.UJ-GuestLogonCollectionCheckout.Threads=1
-FR.UJ-GuestLogonCollectionCheckout.Pacing=1000
-FR.UJ-LogonDeliveryCheckout.Threads=1
-FR.UJ-LogonDeliveryCheckout.Pacing=1000
-FR.UJ-LogonPromoDeliveryCheckout.Threads=1
-FR.UJ-LogonPromoDeliveryCheckout.Pacing=1000
-
+FR.UJ-MyAccount.Threads=3
+FR.UJ-MyAccount-MyOrders.Threads=3
 
 ## DE
 
 # Desktop search/browse
-DE.UJ-Homepage.Threads=1
-DE.UJ-Homepage.Pacing=1000
-DE.UJ-BrowseTopCategory.Threads=1
-DE.UJ-BrowseTopCategory.Pacing=1000
-DE.UJ-BrowseSubCategory.Threads=1
-DE.UJ-BrowseSubCategory.Pacing=1000
-DE.UJ-BrowseTerCategory.Threads=1
-DE.UJ-BrowseTerCategory.Pacing=1000
-DE.UJ-BrowseFilteredCategory.Threads=1
-DE.UJ-BrowseFilteredCategory.Pacing=1000
-DE.UJ-BrowsePDP.Threads=1
-DE.UJ-BrowsePDP.Pacing=1000
-DE.UJ-Search.Threads=1
-DE.UJ-Search.Pacing=1000
-
-DE.UJ-BrowsePLPAddSavedItem.Threads=1
-DE.UJ-BrowsePLPAddSavedItem.Pacing=1000
-DE.UJ-BrowsePDPAndSavedItem.Threads=1
-DE.UJ-BrowsePDPAndSavedItem.Pacing=1000
-DE.UJ-LogonViewOrderDetails.Threads=1
-DE.UJ-LogonViewOrderDetails.Pacing=1000
-
-DE.UJ-AddToCart.Threads=1
-DE.UJ-AddToCart.Pacing=1000
-DE.UJ-UpdateCart.Threads=1
-DE.UJ-UpdateCart.Pacing=1000
-DE.UJ-GuestDeliveryCheckout.Threads=1
-DE.UJ-GuestDeliveryCheckout.Pacing=1000
-DE.UJ-GuestCollectionCheckout.Threads=1
-DE.UJ-GuestCollectionCheckout.Pacing=1000
-DE.UJ-GuestLogonDeliveryCheckout.Threads=1
-DE.UJ-GuestLogonDeliveryCheckout.Pacing=1000
-DE.UJ-GuestLogonCollectionCheckout.Threads=1
-DE.UJ-GuestLogonCollectionCheckout.Pacing=1000
-DE.UJ-LogonDeliveryCheckout.Threads=1
-DE.UJ-LogonDeliveryCheckout.Pacing=1000
-DE.UJ-LogonPromoDeliveryCheckout.Threads=1
-DE.UJ-LogonPromoDeliveryCheckout.Pacing=1000
+DE.UJ-MyAccount.Threads=1
+DE.UJ-MyAccount-MyOrders.Threads=1
 
 ## NL
 
 # Desktop search/browse
-NL.UJ-Homepage.Threads=1
-NL.UJ-Homepage.Pacing=1000
-NL.UJ-BrowseTopCategory.Threads=1
-NL.UJ-BrowseTopCategory.Pacing=1000
-NL.UJ-BrowseSubCategory.Threads=1
-NL.UJ-BrowseSubCategory.Pacing=1000
-NL.UJ-BrowseTerCategory.Threads=1
-NL.UJ-BrowseTerCategory.Pacing=1000
-NL.UJ-BrowseFilteredCategory.Threads=1
-NL.UJ-BrowseFilteredCategory.Pacing=1000
-NL.UJ-BrowsePDP.Threads=1
-NL.UJ-BrowsePDP.Pacing=1000
-NL.UJ-Search.Threads=1
-NL.UJ-Search.Pacing=1000
-
-NL.UJ-BrowsePLPAddSavedItem.Threads=1
-NL.UJ-BrowsePLPAddSavedItem.Pacing=1000
-NL.UJ-BrowsePDPAndSavedItem.Threads=1
-NL.UJ-BrowsePDPAndSavedItem.Pacing=1000
-NL.UJ-LogonViewOrderDetails.Threads=1
-NL.UJ-LogonViewOrderDetails.Pacing=1000
-
-NL.UJ-AddToCart.Threads=1
-NL.UJ-AddToCart.Pacing=1000
-NL.UJ-AddToCart-PLP.Threads=1
-NL.UJ-AddToCart-PLP.Pacing=1000
-NL.UJ-UpdateCart.Threads=1
-NL.UJ-UpdateCart.Pacing=1000
-NL.UJ-GuestDeliveryCheckout.Threads=1
-NL.UJ-GuestDeliveryCheckout.Pacing=1000
-NL.UJ-GuestCollectionCheckout.Threads=1
-NL.UJ-GuestCollectionCheckout.Pacing=1000
-NL.UJ-GuestLogonDeliveryCheckout.Threads=1
-NL.UJ-GuestLogonDeliveryCheckout.Pacing=1000
-NL.UJ-GuestLogonCollectionCheckout.Threads=1
-NL.UJ-GuestLogonCollectionCheckout.Pacing=1000
-NL.UJ-LogonDeliveryCheckout.Threads=1
-NL.UJ-LogonDeliveryCheckout.Pacing=1000
-NL.UJ-LogonPromoDeliveryCheckout.Threads=1
-NL.UJ-LogonPromoDeliveryCheckout.Pacing=1000
-
+NL.UJ-MyAccount.Threads=1
+NL.UJ-MyAccount-MyOrders.Threads=1
 
 
 
