change to https and reduce runs to 30

--- a/properties/NewLook_GQL.properties
+++ b/properties/NewLook_GQL.properties
@@ -75,7 +75,7 @@ store.2=FR
 #store.4=NL
 
 UK.hostname=my-account-fe-cicd-dsf-uks-as.azurewebsites.net
-UK.port=
+UK.port=443
 #UK.port=4000
 #UK.hostname=www.newlook.com
 #UK.hostname=www-h-vnp.newlook.com
@@ -84,7 +84,7 @@ UK.basepath=uk
 UK.language=en
 
 FR.hostname=my-account-fe-cicd-dsf-uks-as.azurewebsites.net
-FR.port=
+FR.port=443
 #FR.port=4000
 #FR.hostname=www.newlook.com
 #FR.hostname=www-h-vnp.newlook.com
@@ -93,7 +93,7 @@ FR.basepath=fr
 FR.language=fr
 
 DE.hostname=my-account-fe-cicd-dsf-uks-as.azurewebsites.net
-DE.port=
+DE.port=443
 #DE.port=4000
 #DE.hostname=www.newlook.com
 #DE.hostname=www-h-vnp.newlook.com
@@ -102,7 +102,7 @@ DE.basepath=de
 DE.language=de
 
 NL.hostname=my-account-fe-cicd-dsf-uks-as.azurewebsites.net
-NL.port=
+NL.port=443
 #NL.port=4000
 #NL.hostname=www.newlook.com
 #NL.hostname=www-h-vnp.newlook.com
