--- a/properties/NewLook_SFP.properties
+++ b/properties/NewLook_SFP.properties
@@ -65,8 +65,8 @@ thinkTime=500
 thinkTimeVariation=200
 
 PAYMENT_HOSTNAME=testsecureacceptance.cybersource.com
-#wiremock_hostname=wiremock-be-cicd-dsf-uks-as.azurewebsites.net
-wiremock_port=80
+wiremock_hostname=wiremock-be-cicd-dsf-uks-as.azurewebsites.net
+wiremock_port=443
 #wiremock_hostname=localhost
 #wiremock_port=8081
 ###########################################################
@@ -81,7 +81,7 @@ store.2=FR
 
 
 UK.hostname=my-account-fe-cicd-dsf-uks-as.azurewebsites.net
-UK.port=80
+UK.port=443
 #UK.hostname=localhost
 #UK.port=4200
 #UK.port=4000
@@ -92,7 +92,7 @@ UK.basepath=uk
 UK.language=en
 
 FR.hostname=my-account-fe-cicd-dsf-uks-as.azurewebsites.net
-FR.port=80
+FR.port=443
 #FR.hostname=localhost
 #FR.port=4200
 #FR.port=4000
@@ -103,7 +103,7 @@ FR.basepath=fr
 FR.language=fr
 
 DE.hostname=my-account-fe-cicd-dsf-uks-as.azurewebsites.net
-DE.port=80
+DE.port=443
 #DE.hostname=localhost
 #DE.port=4200
 #DE.port=4000
@@ -114,7 +114,7 @@ DE.basepath=de
 DE.language=de
 
 NL.hostname=my-account-fe-cicd-dsf-uks-as.azurewebsites.net
-NL.port=80
+NL.port=443
 #NL.hostname=localhost
 #NL.port=4200
 #NL.port=4000
