--- a/properties/NewLook_SFP.properties
+++ b/properties/NewLook_SFP.properties
@@ -56,10 +56,11 @@ graphitePrefix=Test.NewLook.VNP.
 
 # Test duration in seconds (5 minutes=300)
 #duration=3900
-runs=30
+duration=60
+#duration=360
+#runs=50
 # Ramp-up Time in seconds (5 minutes=300)
 rampUpTime=1
-
 # Think time between requests in milliseconds
 thinkTime=500
 thinkTimeVariation=200
@@ -75,7 +76,7 @@ wiremock_port=443
 
 # Stores:
 store.1=UK
-store.2=FR
+#store.2=FR
 #store.3=DE
 #store.4=NL
 
@@ -224,25 +225,42 @@ NL.dataFile.searchTermsDataFile=searchTerms.txt
 
 # Desktop search/browse
 UK.UJ-MyAccount.Threads=3
+UK.UJ-MyAccount.RPM=60
 UK.UJ-MyAccount-MyOrders.Threads=3
+UK.UJ-MyAccount-MyOrders.RPM=120
+UK.UJ-MyAccount-MyOrders-OrderDetails.Threads=3
+UK.UJ-MyAccount-MyOrders-OrderDetails.RPM=36
+
 
 ## FR
 
 # Desktop search/browse
 FR.UJ-MyAccount.Threads=1
+FR.UJ-MyAccount.RPM=1.2
 FR.UJ-MyAccount-MyOrders.Threads=1
+FR.UJ-MyAccount-MyOrders.RPM=1.2
+FR.UJ-MyAccount-MyOrders-OrderDetails.Threads=1
+FR.UJ-MyAccount-MyOrders-OrderDetails.RPM=1
 
 ## DE
 
 # Desktop search/browse
-DE.UJ-MyAccount.Threads=1
-DE.UJ-MyAccount-MyOrders.Threads=1
+DE.UJ-MyAccount.Threads=3
+DE.UJ-MyAccount.RPM=1.2
+DE.UJ-MyAccount-MyOrders.Threads=3
+DE.UJ-MyAccount-MyOrders.RPM=1.2
+DE.UJ-MyAccount-MyOrders-OrderDetails.Threads=3
+DE.UJ-MyAccount-MyOrders-OrderDetails.RPM=36
 
 ## NL
 
 # Desktop search/browse
-NL.UJ-MyAccount.Threads=1
-NL.UJ-MyAccount-MyOrders.Threads=1
+NL.UJ-MyAccount.Threads=3
+NL.UJ-MyAccount.RPM=1.2
+NL.UJ-MyAccount-MyOrders.Threads=3
+NL.UJ-MyAccount-MyOrders.RPM=1.2
+NL.UJ-MyAccount-MyOrders-OrderDetails.Threads=3
+NL.UJ-MyAccount-MyOrders-OrderDetails.RPM=36
 
 
 
