--- a/properties/NewLook_SFP.properties
+++ b/properties/NewLook_SFP.properties
@@ -56,8 +56,8 @@ graphitePrefix=Test.NewLook.VNP.
 
 # Test duration in seconds (5 minutes=300)
 #duration=3900
-duration=60
-#duration=360
+#duration=60
+duration=360
 #runs=50
 # Ramp-up Time in seconds (5 minutes=300)
 rampUpTime=1
@@ -66,10 +66,14 @@ thinkTime=500
 thinkTimeVariation=200
 
 PAYMENT_HOSTNAME=testsecureacceptance.cybersource.com
+protocol=https
+
 wiremock_hostname=wiremock-be-cicd-dsf-uks-as.azurewebsites.net
 wiremock_port=443
 #wiremock_hostname=localhost
 #wiremock_port=8081
+graphql_hostname=apollo-graphql-fe-cicd-dsf-uks-as.azurewebsites.net
+graphql_port=443
 ###########################################################
 # Stores parameters
 #----------------------------------------------------------
@@ -224,12 +228,12 @@ NL.dataFile.searchTermsDataFile=searchTerms.txt
 ## UK
 
 # Desktop search/browse
-UK.UJ-MyAccount.Threads=3
-UK.UJ-MyAccount.RPM=60
-UK.UJ-MyAccount-MyOrders.Threads=3
+UK.UJ-MyAccount.Threads=1
+UK.UJ-MyAccount.RPM=600
+UK.UJ-MyAccount-MyOrders.Threads=1
 UK.UJ-MyAccount-MyOrders.RPM=120
-UK.UJ-MyAccount-MyOrders-OrderDetails.Threads=3
-UK.UJ-MyAccount-MyOrders-OrderDetails.RPM=36
+UK.UJ-MyAccount-MyOrders-OrderDetails.Threads=1
+UK.UJ-MyAccount-MyOrders-OrderDetails.RPM=600
 
 
 ## FR
