--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -42,6 +42,10 @@ jobs:
       ## Use the output from the `hello` step
       - name: get specific run_number
         run: |
+          echo "*** before checkout ***"
+          pwd
+          ls
+          ls -ltr
           runNum=${{github.run_number}}
           if [ runNum == 1 ]; then 
              crunNum = 1
@@ -60,7 +64,7 @@ jobs:
           #path: JMeter-TestAssets
       - name: run JMeter test
         run: |
-          echo "******** Current directory ********"
+          echo "******** Current directory after checkout repo********"
           pwd
           echo "******** ls ************************"
           ls
@@ -82,7 +86,7 @@ jobs:
           #else
           #    echo "no result folder was found"
           #fi
-        working-directory: JMeter-TestAssets
+        #working-directory: JMeter-TestAssets
 
      # - name: Download workflow artifact
      #   continue-on-error: true
