--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -86,7 +86,7 @@ jobs:
           #else
           #    echo "no result folder was found"
           #fi
-        #working-directory: JMeter-TestAssets
+        working-directory: JMeter-TestAssets
 
      # - name: Download workflow artifact
      #   continue-on-error: true
