--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -86,8 +86,14 @@ jobs:
           #else
           #    echo "no result folder was found"
           #fi
-        working-directory: JMeter-TestAssets
+        #working-directory: JMeter-TestAssets
 
+      - name: check workspace
+        run: |
+           echo "*** check workspace ***"
+           pwd
+           ls
+           ls -ltr *
      # - name: Download workflow artifact
      #   continue-on-error: true
      #   id: download
