--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -95,7 +95,8 @@ jobs:
            ls
            ls -ltr *
            headline="+++++++++++++++++++ test github env +++++++++++++\n"
-           result=`awk '{print "test\t10\ntest2\20"}'`
+           result=`awk '{print "test\t10\ntest2\t20"}'`
+           echo "result"+$result
            cRes=${headline}+${result}
            echo "***********************************"
            echo $cRes
