--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -42,10 +42,6 @@ jobs:
       ## Use the output from the `hello` step
       - name: get specific run_number
         run: |
-          echo "*** before checkout ***"
-          pwd
-          ls
-          ls -ltr
           runNum=${{github.run_number}}
           if [ runNum == 1 ]; then 
              crunNum = 1
@@ -64,12 +60,6 @@ jobs:
           #path: JMeter-TestAssets
       - name: run JMeter test
         run: |
-          echo "******** Current directory after checkout repo********"
-          pwd
-          echo "******** ls ************************"
-          ls
-          echo "******** ls -ltr **********************"
-          ls -ltr *
          # cat jmeter-binaries/apache-jmeter-* |tar -zxvf - >/dev/null 2>&1 
          # dateSuffix=`date +%Y%m%d%H%M%S`
          # jtlFilename=`basename scripts/${{env.TEST_GQL_JMX_FILE}} .jmx`-${dateSuffix}.jtl
@@ -90,21 +80,18 @@ jobs:
 
       - name: check workspace
         run: |
-           echo "*** check workspace ***"
-           pwd
-           ls
-           ls -ltr *
            headline="+++++++++++++++++++ test github env +++++++++++++\n"
            result=`awk '{print "test\t10\ntest2\t20"}' properties/NewLook_SFP.properties`
-           echo "result"+$result
-           cRes=${headline}+${result}
+           #echo "result"+$result
+           C_RES=${headline}+${result}
            echo "***********************************"
-           echo $cRes
+           echo $C_RES
            echo "***********************************"
-           echo "compRes<<EOF" >> $GITHUB_ENV
-           echo "${cRes}" >> $GITHUB_ENV
+           echo "C_RES<<EOF" >> $GITHUB_ENV
+           echo "${C_RES}" >> $GITHUB_ENV
            echo "EOF" >> $GITHUB_ENV
-           echo "env.compRes"+${{env.compRes}}
+           echo "&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&"
+           echo "env.C_RES"+${{env.C_RES}}
      # - name: Download workflow artifact
      #   continue-on-error: true
      #   id: download
