--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -92,6 +92,9 @@ jobs:
            echo "EOF" >> $GITHUB_ENV
            echo "&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&"
            echo "env.C_RES"+${{env.C_RES}}
+      - name: display C_RES
+        run: |
+          echo "String in env:: ${{env.C_RES}}"
      # - name: Download workflow artifact
      #   continue-on-error: true
      #   id: download
