--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -91,7 +91,7 @@ jobs:
            echo "+++++++++++++++++++ test github env +++++++++++++" >> $GITHUB_ENV
            echo "${result}" >> $GITHUB_ENV
            echo "EOF" >> $GITHUB_ENV
-           echo "&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&"
+           echo "&&&&&&&&&&&&&&&&**&&&&&&&&&&&&&&"
            #echo "env.C_RES"+${{env.C_RES}}
       - name: display C_RES
         run: |
